components/JoinUs/css/JoinUs.module.css
form.container {
  padding: 2rem 20px;
  position: relative;

  display: flex;
  flex-direction: column;
  align-items: stretch;
}

span.about {
  color: #9295A0;
  font-weight: 500;
  font-size: 15px;
}

article.input_wrapper {
  position: relative;
  background: #434856;
  border: .5px solid #4D4E54;
  border-radius: 6px;
  margin: 10px 0 5px 0;
  height: 40px;
  padding: 0 2px;

  display: flex;
  align-items: center;
}

input.input {
  height: 36px;
  margin: 0 4px;
  flex-grow: 1;
  background: transparent;
  border: none;

  font-size: 12px;
  color: #C7CAD1
}

input.input::placeholder {
  font-size: 11px;
  color: #C7CAD1;
}

span.or {
  text-align: center;
  color: #9295A0;
  font-weight: 500;
  font-size: 15px;
}

article.contact_wrapper {
  display: flex;
  justify-content: center;
  margin-top: 6px;
}

@media screen and (min-width: 1000px) {
  form.container {
    align-self: flex-start;
    align-items: flex-start;
    padding-left: 0;
    max-width: 50%;
  }

  article.input_wrapper {
    width: 100%;
  }

  form.mobile_only {
    display: none;
  }

  form.container.force_center {
    flex-direction: column;
    align-items: center;
    max-width: 100%;
  }
  
  form.container.force_center > * {
    width: 80%;
  }

  form.container.force_center > span.or {
    display: block;
  }

}

@media screen and (min-width: 1200px) {
  form.container {
    align-items: center;
    justify-content: flex-start;
    flex-direction: row;
    max-width: 100%;
    flex-wrap: wrap;
  }

  article.input_wrapper {
    flex-grow: 1;
    margin-right: 4px;
    max-width: 400px;
  }

  span.or {
    display: none;
  }

  article.contact_wrapper {
    padding-left: auto;
  }

}

